Remove console.logs, add react_query and swr (for now)

--- a/packages/stateofjs/lib/surveys/yml/js2020outline.yml
+++ b/packages/stateofjs/lib/surveys/yml/js2020outline.yml
@@ -149,6 +149,8 @@ outline:
       - id: firebase
       - id: xstate
       - id: vuex
+      - id: react_query
+      - id: swr
       - id: datalayer
         intlId: tools.other_tools
         template: project
