--- a/.editorconfig
+++ b/.editorconfig
@@ -11,7 +11,7 @@ indent_size = 2
 indent_style = space
 insert_final_newline = true
 max_line_length = 80
-quote_type = auto
+quote_type = single
 spaces_around_operators = true
 trim_trailing_whitespace = true
 
