--- a/packages/stateofjs/lib/surveys/yml/css2020outline.yml
+++ b/packages/stateofjs/lib/surveys/yml/css2020outline.yml
@@ -15,7 +15,7 @@ hashtag: StateOfCSS
 shareUrl: https://stateofcss.com
 name: 'State of CSS'
 year: 2020
-status: 2
+status: 3 # closed
 imageUrl: 'stateofcss2020.png'
 bgColor: '#232840'
 textColor: '#9ac6c9'
