--- a/packages/stateofjs/lib/surveys/yml/css2020outline.yml
+++ b/packages/stateofjs/lib/surveys/yml/css2020outline.yml
@@ -8,6 +8,7 @@
 
 slug: css2020 # used as first part of field names
 context: state_of_css
+normalizationId: stateofcss
 topic: CSS
 createdAt: October 1, 2020
 prettySlug: state-of-css
