--- a/packages/stateofjs/lib/surveys/yml/js2020outline.yml
+++ b/packages/stateofjs/lib/surveys/yml/js2020outline.yml
@@ -7,6 +7,7 @@
 ### FEATURES ###
 
 slug: js2020
+normalizationId: stateofjs
 context: state_of_js
 topic: JavaScript
 createdAt: December 1, 2020
@@ -16,7 +17,7 @@ shareUrl: https://stateofjs.com
 # resultsUrl: https://2019.stateofjs.com/
 name: 'State of JavaScript'
 year: 2020
-status: 1
+status: 2
 imageUrl: 'stateofjs2019.png'
 bgColor: rgb(34, 36, 41)
 textColor: rgb(224, 228, 228)
@@ -74,7 +75,6 @@ outline:
       - id: custom_elements
       - id: shadow_dom
 
-
   - id: other_features
     template: feature
     slug: features
@@ -119,7 +119,7 @@ outline:
     questions:
       - id: react
       - id: vue
-      # - id: angularjs # TODO: decide if we include it or not…
+      # - id: angularjs
       - id: angular
       - id: preact
       - id: ember
@@ -216,39 +216,39 @@ outline:
         template: happiness
         sectionSlug: happiness
 
-  - id: graphics_animation
-    template: tool
-    slug: tools
-    questions:
-      # charts
-      - id: echarts
-      - id: chartjs
-      - id: d3
-      # - id: recharts
-      # - id: visx
-      # - id: nivo
+  # - id: graphics_animation
+  #   template: tool
+  #   slug: tools
+  #   questions:
+  #     # charts
+  #     - id: echarts
+  #     - id: chartjs
+  #     - id: d3
+  #     # - id: recharts
+  #     # - id: visx
+  #     # - id: nivo
 
-      # drawing/3D
-      - id: threejs
-      - id: pixijs
-      - id: fabricjs
+  #     # drawing/3D
+  #     - id: threejs
+  #     - id: pixijs
+  #     - id: fabricjs
 
-      # animation
-      - id: animejs
-      - id: lottie
-      - id: greensock
-      - id: popmotion
-      # - id: motion
-      # - id: velocity
+  #     # animation
+  #     - id: animejs
+  #     - id: lottie
+  #     - id: greensock
+  #     - id: popmotion
+  #     # - id: motion
+  #     # - id: velocity
 
-      - id: graphics_animation
-        intlId: tools.other_tools
-        template: project
-        sectionSlug: tools_others
-      - id: graphics_animation
-        intlId: tools.happiness
-        template: happiness
-        sectionSlug: happiness
+  #     - id: graphics_animation
+  #       intlId: tools.other_tools
+  #       template: project
+  #       sectionSlug: tools_others
+  #     - id: graphics_animation
+  #       intlId: tools.happiness
+  #       template: happiness
+  #       sectionSlug: happiness
 
   - id: build_tools
     template: tool
@@ -258,8 +258,9 @@ outline:
       - id: parcel
       - id: gulp
       - id: rollup
-      - id: fusebox
+      # - id: fusebox
       - id: browserify
+      - id: tsc
       - id: rome
       - id: snowpack
       - id: swc
@@ -300,6 +301,7 @@ outline:
   - id: other_tools
     slug: tools_others
     questions:
+
       - id: libraries
         template: multiple
         options:
@@ -316,20 +318,42 @@ outline:
           - id: axios
       - id: libraries
         template: project
+
       - id: utilities
         template: multiple
         options:
+          - id: npm
+          - id: yarn
           - id: babel
           - id: lerna
           - id: prettier
           - id: eslint
           - id: nvm
           - id: 'n'
-          - id: npm
-          - id: yarn
-          - id: deno
       - id: utilities
         template: project
+
+      - id: runtimes
+        template: multiple
+        options: 
+            - id: browser_environment
+            - id: node
+            - id: deno
+            - id: chakracore
+            - id: hermes
+      - id: runtimes
+        template: others
+
+      # - id: package_registries
+      #   template: multiple
+      #   options: 
+      #       - id: npm
+      #       - id: github
+      #       - id: jspm
+      #       - id: private_registry
+      # - id: package_registries
+      #   template: others
+
       - id: text_editors
         template: multiple
         options:
@@ -342,6 +366,7 @@ outline:
           - id: nova
       - id: text_editors
         template: others
+
       - id: browsers
         template: multiple
         options:
@@ -364,6 +389,7 @@ outline:
           - id: polypane
       - id: browsers
         template: others
+
       - id: non_js_languages
         template: multiple
         options:
@@ -377,8 +403,8 @@ outline:
           - id: objective_c
           - id: scala
           - id: swift
-          - id: c_sharp
-          - id: dot_net
+          - id: csharp
+          - id: dotnet
           - id: haskell
           - id: ocaml
           - id: dart
@@ -391,6 +417,7 @@ outline:
   - id: resources
     slug: resources
     questions:
+
       - id: blogs_news_magazines
         template: multiple
         options:
@@ -401,17 +428,18 @@ outline:
           - id: sitepoint
           - id: david_walsh
           - id: devto
-          - id: dailyjs
-          - id: echojs
+          - id: daily_js
+          - id: echo_js
           - id: front_end_front
-          - id: javascript_weekly
-          - id: best_of_js
+          - id: js_weekly
+          - id: bestofjs
           - id: overreacted
           - id: kentcdodds
-          - id: alligator_io
+          - id: alligator
           - id: medium
       - id: blogs_news_magazines
         template: others
+
       - id: sites_courses
         template: multiple
         options:
@@ -426,9 +454,10 @@ outline:
           - id: designcode
           - id: udemy
           - id: egghead
-          - id: frontend_masters
+          - id: frontendmasters
       - id: sites_courses
         template: others
+
       - id: podcasts
         template: multiple
         options:
@@ -441,7 +470,7 @@ outline:
           - id: full_stack_radio
           - id: front_end_happy_hour
           - id: jamstack_radio
-          - id: the_web_platform_podcast
+          - id: web_platform_podcast
           - id: modern_web
           - id: codepen_radio
           - id: ladybug
@@ -453,7 +482,7 @@ outline:
           - id: frontend_first
           - id: http_203
           - id: a11y_rules
-          - id: toolsday
+          - id: tools_day
           - id: the_bike_shed
           - id: css_podcast
       - id: podcasts
@@ -464,6 +493,7 @@ outline:
   - id: opinions
     slug: opinions
     questions:
+
       - id: js_moving_in_right_direction
         template: opinion
       - id: building_js_apps_overly_complex
@@ -476,14 +506,25 @@ outline:
         template: opinion
       - id: js_ecosystem_changing_to_fast
         template: opinion
+
       - id: missing_from_js
-        template: longtext
+        sectionSlug: opinions_others
+        template: others
+        matchTags: [missing_features]
+
+      - id: state_of_the_web
+        template: happiness
+        sectionSlug: happiness
+      - id: state_of_js
+        template: happiness
+        sectionSlug: happiness
 
   ### DEMOGRAPHICS ###
 
   - id: user_info
     slug: user_info
     questions:
+
       - id: years_of_experience
         template: single
         options:
@@ -537,6 +578,7 @@ outline:
         
       - id: how_did_user_find_out_about_the_survey
         template: text
+
       - id: gender
         template: single
         allowother: true
@@ -545,6 +587,7 @@ outline:
           - id: male
           - id: non_binary
           - id: prefer_not_to_say
+
       - id: race_ethnicity
         template: multiple
         options:
@@ -557,6 +600,29 @@ outline:
           - id: native_american_islander_australian
           - id: south_asian
           - id: white_european
+
+      - id: github_username
+        template: text
+
+      - id: industry_sector
+        template: multiple
+        options: 
+          - id: ecommerce
+          - id: news_media
+          - id: healthcare
+          - id: finance
+          - id: programming_tools
+          - id: socialmedia
+          - id: marketing_tools
+          - id: saas
+          - id: education
+          - id: real_estate
+          - id: entertainment
+          - id: retail
+          - id: consulting
+          
+      - id: industry_sector
+        template: others
 
       - id: country
         template: country
