Work on support for "translator mode"

--- a/packages/stateofjs/lib/surveys/yml/js2020outline.yml
+++ b/packages/stateofjs/lib/surveys/yml/js2020outline.yml
@@ -18,7 +18,7 @@ shareUrl: https://stateofjs.com
 name: 'State of JavaScript'
 year: 2020
 status: 2
-imageUrl: 'stateofjs2019.png'
+imageUrl: 'stateofjs2020.png'
 bgColor: rgb(34, 36, 41)
 textColor: rgb(224, 228, 228)
 linkColor: rgb(65, 199, 199)
@@ -614,11 +614,10 @@ outline:
           - id: programming_tools
           - id: socialmedia
           - id: marketing_tools
-          - id: saas
           - id: education
           - id: real_estate
           - id: entertainment
-          - id: retail
+          - id: government
           - id: consulting
           
       - id: industry_sector
