--- a/packages/stateofjs/lib/surveys/yml/js2020outline.yml
+++ b/packages/stateofjs/lib/surveys/yml/js2020outline.yml
@@ -364,6 +364,8 @@ outline:
           - id: emacs
           - id: webstorm
           - id: nova
+          - id: phpstorm
+          - id: notepad
       - id: text_editors
         template: others
 
@@ -509,7 +511,7 @@ outline:
 
       - id: missing_from_js
         sectionSlug: opinions_others
-        template: others
+        template: others_textarea
         matchTags: [missing_features]
 
       - id: state_of_the_web
