--- a/packages/stateofjs/lib/surveys/yml/js2020outline.yml
+++ b/packages/stateofjs/lib/surveys/yml/js2020outline.yml
@@ -136,7 +136,7 @@ outline:
         template: happiness
         sectionSlug: happiness
 
-  - id: data_layer
+  - id: datalayer
     template: tool
     slug: tools
     questions:
