--- a/packages/stateofjs/lib/surveys/yml/css2020outline.yml
+++ b/packages/stateofjs/lib/surveys/yml/css2020outline.yml
@@ -14,6 +14,7 @@ createdAt: October 1, 2020
 prettySlug: state-of-css
 hashtag: StateOfCSS
 shareUrl: https://stateofcss.com
+resultsUrl: https://2020.stateofcss.com/
 name: 'State of CSS'
 year: 2020
 status: 3 # closed
