--- a/packages/stateofjs/lib/surveys/yml/css2021outline.yml
+++ b/packages/stateofjs/lib/surveys/yml/css2021outline.yml
@@ -610,6 +610,7 @@ outline:
           - id: male
           - id: non_binary
           - id: prefer_not_to_say
+
       - id: race_ethnicity
         template: multiple
         options:
@@ -622,6 +623,39 @@ outline:
           - id: native_american_islander_australian
           - id: south_asian
           - id: white_european
+
+
+      - id: github_username
+        template: text
+        
+      - id: industry_sector
+        template: multiple
+        options: 
+          - id: ecommerce
+          - id: news_media
+          - id: healthcare
+          - id: finance
+          - id: programming_tools
+          - id: socialmedia
+          - id: marketing_tools
+          - id: education
+          - id: real_estate
+          - id: entertainment
+          - id: government
+          - id: consulting
+          - id: travel
+          - id: insurance
+          - id: logistics
+          - id: energy
+          - id: telecommunications
+          - id: student
+          - id: hospitality
+          - id: cyber_security
+          - id: construction
+          - id: automotive
+          - id: agriculture
+          - id: transport
+          - id: manufacturing
 
       - id: country
         template: country
