--- a/package.json
+++ b/package.json
@@ -13,115 +13,116 @@
     "deploy": "DEPLOY_HOSTNAME=us-east-1.galaxy-deploy.meteor.com meteor deploy survey.stateofjs.com --settings settings-production.json",
     "deploy-cached": "DEPLOY_HOSTNAME=us-east-1.galaxy-deploy.meteor.com meteor deploy survey.stateofjs.com --settings settings-production.json --cache-build"
   },
-  "dependencies": { 
-    "@apollo/client": "^3.2.1",
+  "dependencies": {
+    "@apollo/client": "^3.4.7",
     "@apollo/react-hoc": "^4.0.0",
-    "@babel/runtime": "^7.11.2",
-    "@sentry/browser": "^5.24.2",
-    "@sentry/node": "5.24.2",
+    "@babel/runtime": "^7.15.3",
+    "@graphql-tools/merge": "^7.0.0",
+    "@graphql-tools/schema": "^8.0.3",
+    "@graphql-tools/utils": "^8.0.2",
+    "@sentry/browser": "^6.11.0",
+    "@sentry/node": "6.11.0",
     "@sgrove/onegraph-apollo-server-auth": "^2.0.3-alpha-2",
-    "@types/react": "^16.9.49",
-    "analytics-node": "3.4.0-beta.2",
+    "@types/react": "^17.0.17",
     "apollo-cache": "^1.3.5",
     "apollo-cache-inmemory": "^1.6.6",
     "apollo-client": "^2.6.10",
-    "apollo-engine": "^1.1.2",
     "apollo-errors": "^1.9.0",
     "apollo-link": "^1.2.14",
     "apollo-link-error": "^1.1.13",
     "apollo-link-http": "^1.5.17",
     "apollo-link-schema": "^1.2.5",
     "apollo-link-state": "^0.4.2",
-    "apollo-server": "2.18.1",
-    "apollo-server-express": "2.18.1",
+    "apollo-server": "3.1.2",
+    "apollo-server-express": "3.1.2",
     "apollo-utilities": "^1.3.4",
     "babel-runtime": "^6.26.0",
-    "bcrypt": "^5.0.0",
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "body-parser-graphql": "^1.1.0",
     "bowser": "^2.11.0",
-    "chalk": "4.1.0",
-    "classnames": "^2.2.6",
+    "chalk": "4.1.2",
+    "classnames": "^2.3.1",
     "combined-stream2": "^1.1.2",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.5",
-    "cross-fetch": "^3.0.6",
-    "crypto-js": "^4.0.0",
-    "css-loader": "^4.3.0",
+    "cross-fetch": "^3.1.4",
+    "crypto-js": "^4.1.1",
+    "css-loader": "^6.2.0",
     "dataloader": "^2.0.0",
     "deepmerge": "^4.2.2",
     "dot-object": "^2.1.4",
     "escape-string-regexp": "^4.0.0",
     "express": "^4.17.1",
     "flat": "^5.0.2",
-    "graphql": "15.3.0",
+    "graphql": "15.5.1",
     "graphql-anywhere": "4.2.7",
     "graphql-date": "^1.0.3",
-    "graphql-tag": "^2.11.0",
-    "graphql-tools": "^6.2.3",
+    "graphql-tag": "^2.12.5",
     "graphql-type-json": "^0.3.2",
     "graphql-voyager": "1.0.0-rc.31",
-    "handlebars": "^4.7.6",
+    "handlebars": "^4.7.7",
     "he": "^1.2.0",
     "history": "^5.0.0",
-    "html-to-text": "^5.1.1",
+    "html-to-text": "^8.0.0",
     "immutability-helper": "^3.1.1",
     "import": "0.0.6",
     "intl": "^1.2.5",
     "intl-locales-supported": "^1.8.12",
-    "js-yaml": "^3.14.0",
+    "js-yaml": "^4.1.0",
     "jsonwebtoken": "^8.5.1",
-    "juice": "^7.0.0",
-    "jwks-rsa": "^1.10.1",
-    "lodash": "^4.17.20",
-    "mailchimp": "^1.2.1",
-    "marked": "^1.1.1",
-    "meteor-node-stubs": "^1.0.1",
-    "mingo": "^3.0.6",
-    "moment": "^2.29.0",
-    "moment-timezone": "^0.5.31",
+    "juice": "^8.0.0",
+    "jwks-rsa": "^2.0.4",
+    "lodash": "^4.17.21",
+    "marked": "^2.1.3",
+    "meteor-node-stubs": "^1.1.0",
+    "mingo": "^4.1.4",
+    "moment": "^2.29.1",
+    "moment-timezone": "^0.5.33",
     "node-cache": "^5.1.2",
-    "node-sass": "^4.14.1",
+    "node-sass": "^6.0.1",
     "pluralize": "^8.0.0",
     "prop-types": "^15.7.2",
-    "qs": "^6.9.4",
-    "react": "^16.13.1",
-    "react-addons-pure-render-mixin": "^15.6.2",
-    "react-bootstrap": "1.3.0",
-    "react-bootstrap-typeahead": "^5.1.1",
-    "react-confetti": "^6.0.0",
-    "react-cookie": "^4.0.3",
-    "react-countup": "^4.3.3",
+    "qs": "^6.10.1",
+    "react": "^17.0.2",
+    "react-addons-pure-render-mixin": "^15.6.3",
+    "react-bootstrap": "1.6.1",
+    "react-bootstrap-typeahead": "^5.2.0",
+    "react-confetti": "^6.0.1",
+    "react-cookie": "^4.1.1",
+    "react-countup": "^5.2.0",
     "react-datetime": "^3.0.4",
-    "react-dom": "^16.13.1",
-    "react-dropzone": "^11.2.0",
+    "react-dom": "^17.0.2",
+    "react-dropzone": "^11.3.4",
     "react-helmet": "^6.1.0",
-    "react-intl": "^5.8.2",
+    "react-intl": "^5.20.7",
     "react-loadable": "^5.5.0",
-    "react-markdown": "^4.3.1",
-    "react-overlays": "^4.1.0",
+    "react-markdown": "^6.0.3",
+    "react-overlays": "^5.1.1",
     "react-places-autocomplete": "^7.3.0",
-    "react-redux": "^7.2.1",
+    "react-redux": "^7.2.4",
     "react-router": "^5.2.0",
     "react-router-bootstrap": "0.25.0",
     "react-router-dom": "^5.2.0",
-    "react-select": "^3.1.0",
+    "react-select": "^4.3.1",
     "react-stripe-checkout": "^2.6.3",
-    "react-syntax-highlighter": "^13.5.3",
+    "react-syntax-highlighter": "^15.4.4",
     "recompose": "^0.30.0",
     "redux": "^4.0.5",
+    "rehype-raw": "^6.0.0",
+    "rehype-sanitize": "^5.0.0",
     "rss": "^1.2.2",
-    "sanitize-html": "^2.0.0",
-    "sass-loader": "^10.0.2",
+    "sanitize-html": "^2.4.0",
+    "sass-loader": "^12.1.0",
     "simpl-schema": "^1.10.1",
     "speakingurl": "^14.0.1",
     "storybook-addon-intl": "^2.4.1",
-    "string-similarity": "^4.0.2",
-    "stripe": "^8.100.0",
-    "style-loader": "^1.2.1",
-    "styled-components": "^5.2.0",
+    "string-similarity": "^4.0.4",
+    "stripe": "^8.169.0",
+    "style-loader": "^3.2.1",
+    "styled-components": "^5.3.0",
     "tracker-component": "^1.3.21",
-    "underscore": "^1.11.0",
+    "underscore": "^1.13.1",
     "universal-cookie-express": "^4.0.3",
     "url": "^0.11.0"
   },
@@ -131,11 +132,11 @@
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/preset-env": "^7.11.5",
     "@babel/preset-react": "^7.10.4",
-    "@storybook/addon-actions": "6.0.21",
-    "@storybook/addon-knobs": "6.0.21",
+    "@storybook/addon-actions": "^6.3.7",
+    "@storybook/addon-knobs": "^6.2.9",
     "@storybook/addon-links": "6.0.21",
     "@storybook/addons": "6.0.21",
-    "@storybook/react": "6.0.21",
+    "@storybook/react": "^6.3.7",
     "@storybook/theming": "6.0.21",
     "autoprefixer": "^10.0.0",
     "babel-eslint": "^10.1.0",
